--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -247,6 +247,7 @@ textarea {
   opacity: 0;
   margin: 0 auto;
   padding-left: 72px;
+  box-sizing: border-box;
   z-index: 1;
   transform-style: preserve-3d;
   animation: fadeIn 1s forwards;
